--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<a class="active item">
+<a class="active item" href="/">
     Chatroom
 </a>
 <a class="item">
@@ -8,9 +8,13 @@
     <div class="ui dropdown item">
     Account <i class="dropdown icon"></i>
     <div class="menu">
-        <a class="item">Log In</a>
+        <% if logged_in? %>
+            <%= link_to "Log Out", logout_path, data: { "turbo-method": :delete }, class: "item"%>
+        <% else %>
+            <%= link_to "Log In", login_path, class: "item" %>
+        <% end %>
         <a class="item">Sign Up</a>
-        <a class="item">Log Out</a>
+        
     </div>
     </div>
     <div class="item">
